# OpenGL-Playground

./: .gitignore  readme.md
indexed_draws/: CMakeLists.txt
indexed_draws/shaders/: vShader.vert
indexed_draws/src/: GLProgram.cpp  Mesh.cpp  MeshRenderer.cpp  common.h  main.cpp
src/: common.h  main.cpp
triangle/: CMakeLists.txt
